--- a/app/src/main/res/layout/news_card.xml
+++ b/app/src/main/res/layout/news_card.xml
@@ -29,7 +29,7 @@
             android:orientation="vertical"
             android:padding="4dp">
 
-            <ImageView
+            <WebView
                 android:id="@+id/news_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
