--- a/app/src/main/res/layout/dashboard_main.xml
+++ b/app/src/main/res/layout/dashboard_main.xml
@@ -8,11 +8,38 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:padding="@dimen/default_margin_padding"
+    android:weightSum="2"
     tools:context=".ui.Survey">
 
-    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/webview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="135dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="4dp">
+
+        <WebView
+            android:id="@+id/wv1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="NEWS Image"
+            android:padding="@dimen/default_margin_padding"
+            android:src="@drawable/effort" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="135dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="4dp">
+
+        <WebView
+            android:id="@+id/wv2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="NEWS Image"
+            android:padding="@dimen/default_margin_padding"
+            android:src="@drawable/effort" />
+    </LinearLayout>
 </LinearLayout>
