--- a/app/src/main/res/layout/dashboard_main.xml
+++ b/app/src/main/res/layout/dashboard_main.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,38 +9,46 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:padding="@dimen/default_margin_padding"
-    android:weightSum="2"
     tools:context=".ui.Survey">
 
-    <LinearLayout
+    <com.cjj.MaterialRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="135dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:padding="4dp">
+        android:layout_height="match_parent"
+        android:weightSum="2"
+        app:wave_color="@color/primary">
 
-        <WebView
-            android:id="@+id/wv1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="NEWS Image"
-            android:padding="@dimen/default_margin_padding"
-            android:src="@drawable/effort" />
-    </LinearLayout>
+            android:layout_height="135dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="4dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="135dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:padding="4dp">
+            <WebView
+                android:id="@+id/wv1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="NEWS Image"
+                android:padding="@dimen/default_margin_padding"
+                android:src="@drawable/effort" />
+        </LinearLayout>
 
-        <WebView
-            android:id="@+id/wv2"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="NEWS Image"
-            android:padding="@dimen/default_margin_padding"
-            android:src="@drawable/effort" />
-    </LinearLayout>
+            android:layout_height="135dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <WebView
+                android:id="@+id/wv2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="NEWS Image"
+                android:padding="@dimen/default_margin_padding"
+                android:src="@drawable/effort" />
+        </LinearLayout>
+
+    </com.cjj.MaterialRefreshLayout>
 </LinearLayout>
