--- a/app/src/main/res/layout/dashboard_main.xml
+++ b/app/src/main/res/layout/dashboard_main.xml
@@ -14,41 +14,28 @@
     <com.cjj.MaterialRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
+        android:layout_gravity="center"
         android:layout_height="match_parent"
-        android:weightSum="2"
         app:wave_color="@color/primary">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="135dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="4dp">
+        <WebView
+            android:id="@+id/wv1"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="NEWS Image"
+            android:padding="@dimen/default_margin_padding"
+            android:src="@drawable/effort" />
 
-            <WebView
-                android:id="@+id/wv1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="NEWS Image"
-                android:padding="@dimen/default_margin_padding"
-                android:src="@drawable/effort" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="135dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="4dp">
-
-            <WebView
-                android:id="@+id/wv2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="NEWS Image"
-                android:padding="@dimen/default_margin_padding"
-                android:src="@drawable/effort" />
-        </LinearLayout>
+        <WebView
+            android:id="@+id/wv2"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="250dp"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="NEWS Image"
+            android:padding="@dimen/default_margin_padding"
+            android:src="@drawable/effort" />
 
     </com.cjj.MaterialRefreshLayout>
 </LinearLayout>
